up 유니코드로 인코딩된 파일 정상적인 인코딩 파일로 교체

--- a/share file/json/nltk/apple_soao.json
+++ b/share file/json/nltk/apple_soao.json
@@ -1,1 +1,1 @@
-﻿{"target": "apple", "target_trans": ["\uc560\ud50c", "\uc0ac\uacfc", "\uc0ac\uacfc\ub098\ubb34", "\ub274\uc695"], "synonyms": ["apple", "orchard_apple_tree", "Malus_pumila"], "antonyms": []}
+﻿{"target": "apple", "target_trans": ["애플", "사과", "사과나무", "뉴욕"], "synonyms": ["Malus_pumila", "orchard_apple_tree", "apple"], "antonyms": []}
