up test,test2에 둘다 적용가능하게 jsp 뷰 수정
jsp1개가 test,test2를 동시에 처리가능하도록 변경
web.xml에 test2의 controller 링크 게시

--- a/JavaWeb/Web/web/WEB-INF/web.xml
+++ b/JavaWeb/Web/web/WEB-INF/web.xml
@@ -65,4 +65,13 @@
         <servlet-name>testFrontController</servlet-name>
         <url-pattern>*.ts</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>testFrontController2</servlet-name>
+        <servlet-class>net.__test2.action.controller.testFrontController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>testFrontController2</servlet-name>
+        <url-pattern>*.ts2</url-pattern>
+    </servlet-mapping>
 </web-app>
