add test 3번째 예제
db에 json파일을 박고 파싱을 하여 뷰
단어가 이미 있는 경우 파이썬 호출 X

db에 존재하는 단어리스트를 전부 보여줌

--- a/JavaWeb/Web/web/WEB-INF/web.xml
+++ b/JavaWeb/Web/web/WEB-INF/web.xml
@@ -74,4 +74,13 @@
         <servlet-name>testFrontController2</servlet-name>
         <url-pattern>*.ts2</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>testFrontController3</servlet-name>
+        <servlet-class>net.__test3.action.controller.testFrontController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>testFrontController3</servlet-name>
+        <url-pattern>*.ts3</url-pattern>
+    </servlet-mapping>
 </web-app>
