--- a/JavaWeb/Web/web/WEB-INF/web.xml
+++ b/JavaWeb/Web/web/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 
     <resource-ref>
         <description>Connection</description>
-        <res-ref-name>test</res-ref-name>
+        <res-ref-name>WordBookWeb</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
@@ -82,5 +82,15 @@
     <servlet-mapping>
         <servlet-name>testFrontController3</servlet-name>
         <url-pattern>*.ts3</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>MainpageController</servlet-name>
+        <servlet-class>com.mainpage.action.controller.MainPageController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MainpageController</servlet-name>
+        <url-pattern>*.mp</url-pattern>
+        <url-pattern>/index.jsp</url-pattern>
     </servlet-mapping>
 </web-app>
